# gci_gps

./: .gitignore  CMakeLists.txt  format-code.sh  readme.md
c/: CMakeLists.txt
c/examples/: CMakeLists.txt  checksum.c  gps_time.c  gsa.c  rmc.c
c/scruffy/: test.c
docs/: calculate_error.md  nema_messages.md
docs/nema/: nema.html
docs/ublox/: ublox.md
examples/: CMakeLists.txt  checksum.c  gga.c  gps_time.c  gsa.c  multiple.c  position_error.c  rmc.c  ubx.c
gtests/: CMakeLists.txt  gtests.cpp
pico/: CMakeLists.txt
pico/examples/: CMakeLists.txt  gga.c  gps-serial.c
scruffy/: readme.md  test.c
src/: checksum.c  gci_gps.h  gga.c  gps.c  gps.h  gps_time.c  gsa.c  rmc.c
src/nema/: checksum.c  gga.c  gps_time.c  gsa.c  mtk.h  nema.h  rmc.c
src/ublox/: ubx_parser.c  ubx_parser.h
